--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,8 @@
                 { note: 'C', keycolor: 'white', keyboardNotes: 'z' },
                 { note: 'Db', keycolor: 'black', keyboardNotes: 's' },
                 { note: 'D', keycolor: 'white', keyboardNotes: 'x' }
-            ]
+            ],
+            audioType: 'mp3'
            }
           3) configuration : const piano = new Piano('#piano', options);
           4) if option not passed defaultOption will be taken, refer Piano.ts
