--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="Piano by Arun Bharath">
   <meta name="author" content="Arun Bharath">
   <link rel="shortcut icon" href="../../assets/images/favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800&display=swap" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800&display=swap" rel="stylesheet"> -->
 
 </head>
 
